# for display continuity sake please use 2 spaces instead of tabs

2013-03-21 mmichaud <michael.michaud@free.fr>
  * fix : 3608648 can now open a project including broken db connections.
  * ZoomToScalePlugIn now remembers last scale set bythe user
  * Improve exception handling in DataStoreQueryDataSource

2013-03-21 mmichaud <michael.michaud@free.fr>
  * fix in DbfFile appearing with very long header
  * retrieving geometry columns in postgis is now case sensitive
  
2013-03-18 mmichaud <michael.michaud@free.fr>
  * small fix in Add3DGeometryAttributesPLugIn maxSlope calculation

2013-03-17 Matthias Scholz <ms@jammerhund.de>
  * Fix some german translations
  * Fix AboutDialog.formatDirNameForHtml(), because if a HTML text for a JLabel
    contains a leading "/", their is nothing displayed. This is a well known
    Java Bug (http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6688690).
    This bug occurs only under Linux, because every path starts with 
    a leading "/".

2013-03-17 mmichaud <michael.michaud@free.fr>
  * Fix two problems in SimplifyPolygonCoveragePlugIn : some polygons were 
    missing in the result and sometimes the wrong attributes were transferred

2013-03-13 mmichaud <michael.michaud@free.fr>
  * change default Open Wizard to Open File (was Open Project) 

2013-03-13 mmichaud <michael.michaud@free.fr>
  * extend SelectionStyllingOptionsPanel to support fill color and fill opacity 
    customization
  * fix a problem in the scale displayed in the status bar (moved the code 
    from AbstractCursorTool to WorkbenchFrame which is a zoomChanged listener).
  
2013-03-12 ede
  * general shortcut support, shortcut documentation under Help
  * added -print-properties command line switch

2013-03-09 mmichaud <michael.michaud@free.fr>
  * add createExactlyOneSelectedLayerMustBeEditableCheck in DuplicateItemPlugIn
    to avoid a NPE (no layer selected) and make sure the user knows where 
    items will be copied.