@@ -4,6 +4,7 @@
   * fix : 3608648 can now open a project including broken db connections.
   * ZoomToScalePlugIn now remembers last scale set bythe user
   * Improve exception handling in DataStoreQueryDataSource
+  * In AddDataStoreLayerPanel, the list of available tables is now uptodate
 
 2013-03-21 mmichaud <michael.michaud@free.fr>
   * fix in DbfFile appearing with very long header
